parser/src/tests/corpus/negatives/evocation-in-query/expected
Error from "negatives/evocation-in-query/input", line 1:
| query !x
|       ^^
|
+-> Syntax error: while parsing query definition, query expressions cannot contain evoke effects, e.g. `!…`

